
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*,size_t) ;
 void* malloc (size_t) ;
 int memset (void*,int ,size_t) ;
 int stderr ;

void *smalloc(size_t s) {
    void *p;

    if ((p=malloc(s))==((void*)0)) {
 fprintf(stderr,"smalloc(): fatal! Allocation of %u bytes failed\n",s);
 exit (-1);
    }
    memset(p,0,s);
    return p;
}
