; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_21770.c_smalloc.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_21770.c_smalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"smalloc(): fatal! Allocation of %u bytes failed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @smalloc(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i8* @malloc(i64 %4)
  store i8* %5, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @stderr, align 4
  %9 = load i64, i64* %2, align 8
  %10 = call i32 @fprintf(i32 %8, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i64 %9)
  %11 = call i32 @exit(i32 -1) #3
  unreachable

12:                                               ; preds = %1
  %13 = load i8*, i8** %3, align 8
  %14 = load i64, i64* %2, align 8
  %15 = call i32 @memset(i8* %13, i32 0, i64 %14)
  %16 = load i8*, i8** %3, align 8
  ret i8* %16
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @fprintf(i32, i8*, i64) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
